# N-body-gravity-simulator

./: Body.cpp  Body.h  CMakeLists.txt  Simulation.cpp  Simulation.h  Vector2D.h  main.cpp
